--- a/Pages/HomeScreen.xaml
+++ b/Pages/HomeScreen.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ExamTask.Pages"
              mc:Ignorable="d" 
-             d:DesignHeight="400" d:DesignWidth="400" Background="WhiteSmoke">
+             d:DesignHeight="400" d:DesignWidth="400" Background="WhiteSmoke" Height="400" Width="400">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
