--- a/Pages/SellBookScreen.xaml
+++ b/Pages/SellBookScreen.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ExamTask.Pages"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="500" Background="WhiteSmoke">
+             d:DesignHeight="450" d:DesignWidth="500" Background="WhiteSmoke" Width="450" Height="500">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
@@ -21,6 +21,6 @@
         <TextBox x:Name="tb_discount" Grid.Row="1" Width="200" Height="30" Margin="25,52,25,309"/>
         <Label x:Name="l_value" Content="VALUE: " Grid.Row="1" Grid.ColumnSpan="2" FontSize="18" FontFamily="Arial" FontWeight="Bold" Margin="25,99,225,-99"/>
         <Label x:Name="l_totalValue" Content="TOTAL VALUE:" Grid.Row="1" FontSize="18" FontFamily="Arial" FontWeight="Bold" Margin="25,144,225,-145" Grid.ColumnSpan="2"/>
-        <Button x:Name="b_sell" Content="Sell" Grid.Row="1" Width="200" Height="40" VerticalAlignment="Top" FontSize="18" FontFamily="Arial" FontWeight="Bold" Margin="25,330,25,0"/>
+        <Button x:Name="b_sell" Content="Sell" Grid.Row="1" Width="200" Height="40" VerticalAlignment="Top" FontSize="18" FontFamily="Arial" FontWeight="Bold" Margin="25,330,25,0" Click="SellBook_Click"/>
     </Grid>
 </UserControl>
