--- a/Pages/AddBookScreen.xaml
+++ b/Pages/AddBookScreen.xaml
@@ -39,5 +39,6 @@
         <Label Content="Is continuation" Grid.Row="5" FontFamily="Arial" FontSize="18" FontWeight="Bold" Margin="61,16,339,16" Grid.ColumnSpan="2"/>
         <CheckBox x:Name="cb_IsContinuation" Grid.Row="5" Grid.ColumnSpan="2" Margin="249,24,151,-24"/>
         <Button x:Name="b_addBook" Content="Add book" Grid.Row="5" Grid.Column="1" Width="200" Height="40" VerticalAlignment="Center" FontFamily="Arial" FontWeight="Bold" Click="AddBook_Click"/>
+        <Button x:Name="b_cancel" Content="Back" Width="60" Height="30" Margin="10,18,330,19" FontFamily="Arial" FontSize="18" FontWeight="Bold" Click="Cancel_Click"/>
     </Grid>
 </UserControl>
