--- a/Pages/SellBookScreen.xaml
+++ b/Pages/SellBookScreen.xaml
@@ -21,6 +21,7 @@
         <TextBox x:Name="tb_discount" Grid.Row="1" Width="200" Height="30" Margin="25,52,25,309"/>
         <Label x:Name="l_value" Content="VALUE: " Grid.Row="1" Grid.ColumnSpan="2" FontSize="18" FontFamily="Arial" FontWeight="Bold" Margin="25,99,225,-99"/>
         <Label x:Name="l_totalValue" Content="TOTAL VALUE:" Grid.Row="1" FontSize="18" FontFamily="Arial" FontWeight="Bold" Margin="25,144,225,-145" Grid.ColumnSpan="2"/>
-        <Button x:Name="b_sell" Content="Sell" Grid.Row="1" Width="200" Height="40" VerticalAlignment="Top" FontSize="18" FontFamily="Arial" FontWeight="Bold" Margin="25,330,25,0" Click="SellBook_Click"/>
+        <Button x:Name="b_sell" Content="Sell" Grid.Row="1" Width="200" Height="40" VerticalAlignment="Top" FontSize="18" FontFamily="Arial" FontWeight="Bold" Margin="25,284,25,0" Click="SellBook_Click"/>
+        <Button x:Name="b_cancel" Grid.Row="1" Content="Cancel" Width="200" Height="40" Margin="25,340,25,11" FontFamily="Arial" FontSize="18" FontWeight="Bold" Click="Cancel_Click"/>
     </Grid>
 </UserControl>
